--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 .env.development
 .env.local
 .env.production.example
+
+
+Dockerfile.dev
+docker-compose.local.yml
