--- a/package.json
+++ b/package.json
@@ -106,11 +106,14 @@
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
     "prom-client": "^15.1.3",
+    "qrcode": "^1.5.4",
     "redis": "^5.8.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "snappy": "^7.3.3",
     "socket.io": "^4.8.1",
+    "speakeasy": "^2.0.0",
+    "stripe": "^20.0.0",
     "typeorm": "^0.3.27",
     "winston": "^3.18.3"
   },
@@ -122,7 +125,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
-    "@types/express": "^5.0.5",
+    "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
@@ -132,6 +135,9 @@
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/qrcode": "^1.5.6",
+    "@types/speakeasy": "^2.0.10",
+    "@types/stripe": "^8.0.416",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
