--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.1.7",
+    "@nestjs/platform-express": "^11.1.12",
     "@nestjs/platform-socket.io": "^11.1.7",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.1",
@@ -96,6 +96,7 @@
     "libphonenumber-js": "^1.12.29",
     "modbus-serial": "^8.0.23",
     "mqtt": "^5.14.1",
+    "multer": "^2.0.2",
     "nest-winston": "^1.10.2",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
@@ -115,6 +116,7 @@
     "speakeasy": "^2.0.0",
     "stripe": "^20.0.0",
     "typeorm": "^0.3.27",
+    "uuid": "^13.0.0",
     "winston": "^3.18.3"
   },
   "devDependencies": {
